# Bridge-Watch

./: .env.example  .gitignore  ANALYTICS_IMPLEMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  METRICS_IMPLEMENTATION.md  METRICS_PR_SUMMARY.md  Makefile  PR_DESCRIPTION_168.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  METRICS_QUICKSTART.md  TESTING.md  alertmanager.yml  docker-compose.monitoring.yml  package.json  prometheus-alerts.yml  prometheus.yml  test-health.js  tsc_errors.txt  tsconfig.json  vitest.config.ts
contracts/soroban/: Cargo.toml  add_helpers.py  apply_replacements.py  final_fix.py  fix_double_parens.py  fix_enum_variants.py  fix_format_macro.py  fix_get_types.py  fix_key_names.py  fix_malformed_calls.py  fix_remaining_parens.py  fix_remove_parens.py  fix_storage.py  fix_storage_v2.py  replace_parametrized.py  simplify_keys.py
contracts/soroban/src/: acl.rs  analytics_aggregator.rs  asset_registry.rs  circuit_breaker.rs  governance.rs  insurance_pool.rs  lib.rs  liquidity_pool.rs  multisig_treasury.rs  rate_limiter.rs  reputation_system.rs
contracts/soroban/src/relay/: errors.rs  events.rs  mod.rs  types.rs
contracts/soroban/test_snapshots/tests/: test_submit_and_get_health.1.json
contracts/soroban/tests/: README.md  relay_contract.integration.rs
docs/: CICD.md  DATA_VALIDATION.md  DEVELOPMENT_SETUP.md  E2E_TESTING_GUIDE.md  HEALTH_CHECKS.md  MIGRATION_GUIDE.md  (+22 more)
(+579 files in other folders)
