[package]
name = "bridge-watch-contracts"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contracts for Stellar Bridge Watch on-chain monitoring"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.7.1" }

[dev-dependencies]
soroban-sdk = { version = "21.7.1", features = ["testutils"] }
